--- a/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
+++ b/app/src/main/res/layout/fragment_fragment_strength_league_results.xml
@@ -45,4 +45,33 @@
         android:textSize="18sp"
         />
 
+    <Button
+        android:id="@+id/fragment_strength_personal_growth"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/fragment_strength_league_results_create_league_btn"
+        app:layout_constraintStart_toStartOf="@id/fragment_strength_league_results_create_league_btn"
+        app:layout_constraintEnd_toEndOf="@id/fragment_strength_league_results_join_league_btn"
+        android:layout_marginTop="10dp"
+        android:text="Your Personal Growth"
+        android:textAllCaps="false"
+        android:backgroundTint="@color/ssWhite"
+        android:textColor="@color/ssBackgroundBlack"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:padding="6dp"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_strength_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_strength_personal_growth"
+        app:layout_constraintStart_toStartOf="@id/fragment_strength_personal_growth"
+        app:layout_constraintEnd_toEndOf="@id/fragment_strength_personal_growth"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
