--- a/app/src/main/res/layout/league_list_item.xml
+++ b/app/src/main/res/layout/league_list_item.xml
@@ -3,16 +3,98 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/white_border"
+    android:layout_marginBottom="10dp"
+    >
+
+    <TextView
+        android:id="@+id/league_list_item_league_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="League: "
+        android:textSize="18sp"
+        android:textColor="@color/ssBackgroundBlack"
+        />
 
     <TextView
         android:id="@+id/league_list_item_league_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/league_list_item_league_label"
+        app:layout_constraintTop_toTopOf="@+id/league_list_item_league_label"
+        app:layout_constraintTop_toBottomOf="@+id/league_list_item_league_label"
+        android:text="hsdjdhs"
+        android:textSize="18sp"
+        android:textColor="@color/ssBackgroundBlack"
+        />
+
+    <TextView
+        android:id="@+id/league_list_item_date_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/league_list_item_league_label"
+        app:layout_constraintStart_toStartOf="@+id/league_list_item_league_label"
+        app:layout_constraintEnd_toStartOf="@+id/league_list_item_date_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="10dp"
+        android:text="Date:"
+        android:textSize="18sp"
+        android:textColor="@color/ssBackgroundBlack"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        android:layout_marginTop="10dp"
+        app:layout_constraintHorizontal_bias="0"
+        />
+
+    <TextView
+        android:id="@+id/league_list_item_date_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/league_list_item_date_label"
+        app:layout_constraintEnd_toStartOf="@+id/league_list_item_vertical_guideline"
+        app:layout_constraintStart_toEndOf="@+id/league_list_item_date_label"
+        android:layout_marginStart="5dp"
+        android:text="10/12/45"
+        android:textSize="18sp"
+        android:textColor="@color/ssBackgroundBlack"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/league_list_item_vertical_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.50"
+        android:orientation="vertical"
+        />
+
+    <TextView
+        android:id="@+id/league_list_item_pin_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/league_list_item_vertical_guideline"
+        app:layout_constraintTop_toTopOf="@+id/league_list_item_date_name"
+        app:layout_constraintEnd_toStartOf="@+id/league_list_item_pin_name"
+        android:layout_marginStart="20dp"
+        android:text="Pin:"
+        android:textSize="18sp"
+        android:textColor="@color/ssBackgroundBlack"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_bias="0"
+        />
+
+    <TextView
+        android:id="@+id/league_list_item_pin_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/league_list_item_pin_label"
+        app:layout_constraintTop_toTopOf="@+id/league_list_item_pin_label"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Hello"
+        android:layout_marginStart="10dp"
+        android:text="222222"
         android:textSize="18sp"
         android:textColor="@color/ssBackgroundBlack"
         />
