--- a/app/src/main/res/layout/league_table_list_item.xml
+++ b/app/src/main/res/layout/league_table_list_item.xml
@@ -26,6 +26,7 @@
         android:text="Gym name"
         android:textSize="18sp"
         android:textColor="@color/ssBlack"
+        android:textStyle="bold"
         />
 
     <TextView
@@ -39,6 +40,7 @@
         android:text="1st"
         android:textSize="18sp"
         android:textColor="@color/ssBrown"
+        android:textStyle="bold"
         />
 
     <TextView
