--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -445,7 +445,6 @@
                 app:layout_constraintEnd_toStartOf="@+id/profile_sign_out_btn"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
                 android:text="@string/claim"
                 android:textColor="@color/ssWhite"
                 android:textStyle="bold"
@@ -468,7 +467,7 @@
                 android:textColor="@color/ssWhite"
                 android:textStyle="bold"
                 android:background="@drawable/white_border"
-                android:backgroundTint="@color/ssBrown"
+                android:backgroundTint="@color/ssGreen"
                 android:textAllCaps="false"
 
                 />
@@ -496,12 +495,13 @@
                 app:layout_constraintBottom_toBottomOf="@+id/profile_save_btn"
                 app:layout_constraintEnd_toEndOf="@id/profile_heading"
                 app:layout_constraintStart_toEndOf="@+id/profile_save_btn"
-                android:text="@string/log_out"
+                android:text="Cancel Claim"
                 android:textColor="@color/ssWhite"
                 android:textStyle="bold"
                 android:background="@drawable/white_border"
-                android:backgroundTint="@color/ssBrown"
+                android:backgroundTint="@color/ssRed"
                 android:textAllCaps="false"
+                android:visibility="gone"
                 />
 
             <ProgressBar
